# how_to_gpu

./: CMakeLists.txt  README.md
source/data_transfer_op/: data_transfer_op.cu
source/hello_world/: hello_world.cu
source/multi_hello/: multi_hello.cu
